<resources>
    <string name="app_name">Учет бюджета</string>
    <string name="name_hint">Название</string>
    <string name="money_count">0</string>
    <string name="button_text">+</string>
    <string name="ruble_sign">Р</string>

    <string name="expenses">РАСХОДЫ</string>
    <string name="incomes">ДОХОДЫ</string>
    <string name="balance">БАЛАНС</string>
    <string name="total_rubs_count">Ваш баланс</string>
    <string name="total_money">100</string>
    <string name="error">Ошибка!</string>
    <string name="new_item">Новая запись</string>
    <string name="confirm_remove">Вы точно хотите удалить?</string>
    <string name="Remove">Удалено</string>
    <string name="about_app">Ваш незаменимый помощник\nв управлении бюджетом</string>
    <string name="expense">расход</string>
    <string name="income">доход</string>
    <string name="count">%1$d Р</string>
    <string name="yourBalance">ваш баланс</string>


    <array name="main_pager_titles">
        <item>@string/expenses</item>
        <item>@string/incomes</item>
        <item>@string/balance</item>
    </array>

</resources>
